--- a/src/app/equipment/equipment.component.html
+++ b/src/app/equipment/equipment.component.html
@@ -1,8 +1,12 @@
 <div class="displayBox">
     <h3>Equipment</h3>
     <ol>
+        
         <li *ngFor="let item of equipmentItems">
             <!-- "Add to Cargo Hold" button goes here. -->
+            <button [class.active]="item.mass + cargoMass <= maximumAllowedMass && cargoHold.length < maxItems" 
+            [disabled]="cargoHold.length >= maxItems || item.mass + cargoMass > maximumAllowedMass" 
+                (click)="nearCapacity = addItem(item)" >Add to Cargo Hold</button> 
             {{item.name}}, {{item.mass}} kg
         </li>
     </ol>
@@ -13,10 +17,11 @@
 <div class = "displayBox">
     <h3>Cargo Hold: {{cargoHold.length}}/{{maxItems}} Spots Filled</h3>
     <ol>
-        <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
+       <li *ngFor="let equipment of cargoHold">{{equipment.name}}</li>
     </ol>
     <p>Mass in Hold: {{cargoMass}} kg</p>
-    <p>Mass Budget Remaining: {{<!-- Calculate mass remaining here. -->}} kg</p>
+    <p [class.nearMaxMass] = "nearCapacity">Mass Budget Remaining: {{maximumAllowedMass - cargoMass}} kg</p>
     <!-- Add the "Empty Hold" button here. -->
+    <button (click)="emptyHold(); nearCapacity= false">Empty Hold</button>
 </div>
 
